# CodeCvtSDK

./: .gitignore  CMakeLists.txt  README.md  build.bat  cpackage.json
cmake/: function.cmake  get_git_version.cmake  project.cmake
code/interface/: code_cvt_sdk.hpp
code/version/: version.h.in  win_version_info.rc.in
doc/private/: project-tree.md
doc/public/: build-mode.md
example/: CMakelists.txt  example.cpp
script/: build_windows.bat  jenkins_windows.bat
